# ion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: gnn.md  internals.md  layers.md
examples/: __init__.py  cnn_mnist.py  dqn_atari.ipynb  dqn_gymnasium.py  gnn_bbbp.ipynb  gnn_cora.py  gpt_tinystories.ipynb  ion_tour.ipynb  mnist_cnn.py  ppo_gymnax.py  pqn_gymnax.py  rnn_mnist.py  ssm_pathfinder.ipynb  vae_dsprites.ipynb  vae_mnist.ipynb
examples/_common/: __init__.py  datasets.py
ion/: __init__.py  checkpoint.py  optimizer.py  transforms.py  tree.py
ion/gnn/: __init__.py  gat.py  gcn.py  ops.py
ion/nn/: __init__.py  module.py  param.py
ion/nn/blocks/: mlp.py  sequential.py  transformer.py
ion/nn/layers/: attention.py  conv.py  dropout.py  embedding.py  linear.py  lora.py  norm.py  pool.py  positional.py  recurrent.py  ssm.py  upsample.py
tests/: conftest.py  test_generic.py
tests/ion/: test_checkpoint.py  test_jax_transforms.py  test_optimizer.py  test_transforms.py  test_tree.py  test_treescope.py
tests/ion/gnn/: conftest.py  test_gnn_generic.py  test_graph_attention.py  test_graph_conv.py  test_ops.py
tests/ion/nn/: test_module.py  test_nn_generic.py  test_param.py
tests/ion/nn/blocks/: test_mlp.py  test_sequential.py  test_transformer.py
tests/ion/nn/layers/: test_attention.py  test_conv.py  test_dropout.py  test_embedding.py  test_linear.py  test_lora.py  test_norm.py  test_pool.py  test_positional.py  test_recurrent.py  test_ssm.py  test_upsample.py
