[project]
name = "ion"
version = "0.1.0"
description = "Simple neural networks in JAX."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Alex Goddard"}]
dependencies = [
    "jax>=0.5.0",
    "jaxtyping>=0.3.0",
    "treescope",
]

[project.urls]
Homepage = "https://github.com/auxeno/ion"
Repository = "https://github.com/auxeno/ion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "pyright",
    "ruff",
    "ipykernel",
    "pip",
]
examples = [
    "gymnax",
    "optax",
    "plotly",
    "tqdm",
]

[tool.ruff]
src = ["."]
line-length=100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F722", "E731"]

[tool.pyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false

[tool.pytest.ini_options]
pythonpath = ["."]
