[project]
name = "ion-nn"
dynamic = ["version"]
description = "Simple neural networks in JAX."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Alex Goddard"}]
keywords = ["jax", "neural-networks", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.5.0",
    "jaxtyping>=0.3.0",
    "treescope",
]

[project.urls]
Homepage = "https://github.com/auxeno/ion"
Repository = "https://github.com/auxeno/ion"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["ion"]

[dependency-groups]
dev = [
    "pytest",
    "pyright",
    "ruff",
    "ipykernel",
    "pip",
]
examples = [
    "gymnax",
    "nbformat",
    "optax",
    "plotly",
    "tqdm",
]

[tool.ruff]
src = ["."]
line-length=100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["F722", "E731"]

[tool.pyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    # From Optax
    "ignore:Setting `jax_pmap_shmap_merge`:DeprecationWarning",
]
